cabal-version:       2.2

name:                haskell-blog
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/haskell-blog#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2025 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

executable haskell-blog
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:
    base >= 4.7 && < 5,
    http-conduit >= 2.3,
    http-client >= 0.7,
    bytestring >= 0.10,
    mtl >= 2.2,          
    transformers >= 0.5, 
    stm >= 2.5,
    async >= 2.2,
    optparse-applicative >= 0.16,
    aeson >= 2.0,
    blaze-html >= 0.9,
    tasty >= 1.4,
    tasty-hunit >= 0.10           


  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
