cabal-version:       2.2
name:                haskell-blog
version:             0.1.0.0
build-type:          Simple
executable haskell-blog
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       
    Markup
    Markdown
    Html  
  default-language:    Haskell2010
  build-depends:
    base >= 4.7 && < 5,
    http-conduit >= 2.3,
    http-client >= 0.7,
    bytestring >= 0.10,
    mtl >= 2.2,          
    transformers >= 0.5, 
    stm >= 2.5,
    async >= 2.2,
    optparse-applicative >= 0.16,
    aeson >= 2.0,
    blaze-html >= 0.9,
    tasty >= 1.4,
    tasty-hunit >= 0.10,
    time >= 1.9,
    containers >= 0.6,
    directory >= 1.3,
    filepath >= 1.4, 
    text >= 1.2,
    req >= 3.13,
    aeson >= 2.0,
    

ghc-options:         -Wall
                     -Wcompat
                      -Widentities
                      -Wincomplete-record-updates
                      -Wincomplete-uni-patterns
                      -Wmissing-export-lists
                      -Wmissing-home-modules
                      -Wpartial-fields
                      -Wredundant-constraints
